--- a/12.4range/12.4.1.html
+++ b/12.4range/12.4.1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>DOM中的范围</title>
+		<title>DOM范围</title>
 	</head>
 	<body>
 		<p id="p1"><b>hello</b> world!</p>
