--- a/13/13.4.7contextmenu.html
+++ b/13/13.4.7contextmenu.html
@@ -15,6 +15,6 @@
 		<li><a href="#">Yahoo!</a></li>
 	</ul>
 	<div style="width: 800px;height: 200px; background-color: red;"></div>
-	<script type="text/javascript" src="13.4.7contextmenu.html.js"></script>
+	<script type="text/javascript" src="13.4.7contextmenu.js"></script>
 </body>
 </html>
