--- a/14/14.1.3.html
+++ b/14/14.1.3.html
@@ -79,7 +79,7 @@
 		// field1.type="checkbox";
 		/*第一次单击后就禁用提交按钮*/
 		// 避免多次提交表单
-		EventUtil.addHandler(form,"submit",function(){
+		EventUtil.addHandler(form,"submit",function(event){
 			event=EventUtil.getEvent(event);
 			var target=EventUtil.getTarget(event);
 
