--- a/15/15.2.html
+++ b/15/15.2.html
@@ -5,7 +5,11 @@
 	<title>2D上下文</title>
 </head>
 <body>
+	<h3>绘制矩形</h3>
 	<canvas id="drawing" width="200" height="200">A drawing of something</canvas>
+
+	<h3>绘制路径</h3>
+	<canvas id="drawing2" width="200" height="200">A drawing of something</canvas>
 
 	<script type="text/javascript" src="15.2.js"></script>
 </body>
