--- a/15/15.2.html
+++ b/15/15.2.html
@@ -24,6 +24,15 @@
 	<h3>阴影</h3>
 	<canvas id="drawing6" width="200" height="200" style="border: 1px solid #000">A drawing of something</canvas>
 
+	<h3>渐变</h3>
+	<canvas id="drawing7" width="200" height="200" style="border: 1px solid #000">A drawing of something</canvas>
+
+	<h3>模式</h3>
+	<canvas id="drawing8" width="400" height="400" style="border: 1px solid #000">A drawing of something</canvas>
+
+	<h3>使用图像数据</h3>
+	<canvas id="drawing9" width="400" height="400" style="border: 1px solid #000">A drawing of something</canvas>
+
 	<script type="text/javascript" src="15.2.js"></script>
 </body>
 </html>
